--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,40 @@ main {
     color: #666;
 }
 
+.capabilities {
+    text-align: left;
+    margin-top: 3rem;
+    padding: 1rem;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.capabilities h2 {
+    text-align: center;
+    margin-bottom: 1rem;
+}
+
+.capabilities h3 {
+    margin: 1rem 0 0.5rem;
+    color: #0044cc;
+}
+
+.capabilities p,
+.capabilities ul {
+    margin-bottom: 1rem;
+    color: #333;
+}
+
+.capabilities ul {
+    list-style-type: disc;
+    padding-left: 1.5rem;
+}
+
+.capabilities ul ul {
+    list-style-type: circle;
+}
+
 footer {
     background-color: #0044cc;
     color: white;
